# allo-indexer-rs

./: Cargo.toml  README.md  docker-compose.yml  events.md
src/: event_handling.rs  event_log.rs  handle_event.rs  indexer.rs  ipfs.rs  main.rs  round.rs
src/snapshots/: allo_indexer_rs__event_handling__integration_tests__project_created.snap  allo_indexer_rs__event_handling__integration_tests__project_created_and_metadata_updated.snap  allo_indexer_rs__event_handling__integration_tests__snapshot_test_events.snap.new  allo_indexer_rs__indexer__tests__project_created.snap  allo_indexer_rs__indexer__tests__project_created_and_metadata_updated.snap  allo_indexer_rs__indexer__tests__snapshot_test_events.snap.new
