[package]
name = "allo-indexer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
ethers = { version = "2.0.1", default-features = false, features = ["abigen", "ethers-solc", "eip712", "rustls", "legacy"] }
eyre = "0.6.8"
tokio = { version = "1.33.0", features = ["macros"] }
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls" ] }
serde = "1.0.193"
reqwest = "0.11.22"
rayon = "1.8.0"
futures = "0.3.29"
sea-query = { version = "0.30.4", features = [ "with-json" ] }
